[gd_scene load_steps=30 format=3 uid="uid://5edlo6ok3h5u"]

[ext_resource type="Script" path="res://Player.gd" id="1_by05l"]
[ext_resource type="Texture2D" uid="uid://cy727umtaqsgp" path="res://assets/Player/New folder/PlyKid_Jump1.png" id="2_6k2fa"]
[ext_resource type="Texture2D" uid="uid://cmyr81g6p664w" path="res://assets/Player/PlyKid_hold.png" id="3_kwc30"]
[ext_resource type="Texture2D" uid="uid://6e6haweoo1vb" path="res://assets/Player/PlyKid_holdwalk_1.png" id="4_kysxm"]
[ext_resource type="Texture2D" uid="uid://bvxjgvfbm73q0" path="res://assets/Player/PlyKid_holdwalk_2.png" id="5_25xq7"]
[ext_resource type="Texture2D" uid="uid://s4ertvnrhpek" path="res://assets/Player/New folder/PlyKid_Jump2.png" id="6_p5l53"]
[ext_resource type="Texture2D" uid="uid://b6gt0ed04kdxo" path="res://assets/Player/PlyKid_lift.png" id="7_op7p3"]
[ext_resource type="Texture2D" uid="uid://b8nro1w8wthxh" path="res://assets/Player/PlyKid_Throw.png" id="8_lih68"]
[ext_resource type="Texture2D" uid="uid://dvq1aup4t52r2" path="res://assets/Player/walk/PlyKid_walk1.png" id="9_woslp"]
[ext_resource type="Texture2D" uid="uid://dnpwy47fk6wh6" path="res://assets/Player/walk/PlyKid_walk1a.png" id="10_r26rk"]
[ext_resource type="Texture2D" uid="uid://cweb7rgjvto2q" path="res://assets/Player/walk/PlyKid_walk2.png" id="11_8j4fe"]
[ext_resource type="Texture2D" uid="uid://cmhwp8fh244fd" path="res://assets/Player/walk/PlyKid_walk2a.png" id="12_mlxrj"]
[ext_resource type="Texture2D" uid="uid://bc7d8g00cnhua" path="res://assets/Player/PlyKid_test.png" id="13_wsjlp"]
[ext_resource type="Texture2D" uid="uid://dwxbflkolr4h7" path="res://assets/Player/PlyKid_ow.png" id="14_f31yx"]

[sub_resource type="SpriteFrames" id="SpriteFrames_23qqo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_6k2fa")
}],
"loop": true,
"name": &"Fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_kwc30")
}],
"loop": true,
"name": &"Hold",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_kysxm")
}, {
"duration": 1.0,
"texture": ExtResource("3_kwc30")
}, {
"duration": 1.0,
"texture": ExtResource("5_25xq7")
}, {
"duration": 1.0,
"texture": ExtResource("3_kwc30")
}],
"loop": true,
"name": &"Hold Walk",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_6k2fa")
}, {
"duration": 1.0,
"texture": ExtResource("6_p5l53")
}],
"loop": false,
"name": &"Jump",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_op7p3")
}],
"loop": true,
"name": &"Lift",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_lih68")
}],
"loop": false,
"name": &"Throw",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_woslp")
}, {
"duration": 1.0,
"texture": ExtResource("10_r26rk")
}, {
"duration": 1.0,
"texture": ExtResource("11_8j4fe")
}, {
"duration": 1.0,
"texture": ExtResource("12_mlxrj")
}],
"loop": true,
"name": &"Walk",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_wsjlp")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_f31yx")
}],
"loop": true,
"name": &"ow",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lv10b"]
radius = 9.0
height = 42.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_osb4y"]
size = Vector2(24, 7)

[sub_resource type="Animation" id="Animation_1cxbs"]
resource_name = "Walk"
length = 1.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Walk"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 3]
}

[sub_resource type="Animation" id="Animation_06hx1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Walk"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_b0sy6"]
resource_name = "Lift"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Lift"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_h0nmw"]
resource_name = "Hold"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Hold"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ks57g"]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_r7d8j"]
resource_name = "Fall"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Fall"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_0u1qr"]
resource_name = "Hold walking"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Hold Walk"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0, 1, 2, 3, 0, 1]
}

[sub_resource type="Animation" id="Animation_pxl65"]
resource_name = "ow"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"ow"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_lhm4k"]
resource_name = "Jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_w2hb2"]
resource_name = "Throw"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Throw"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5ilhx"]
_data = {
"Fall": SubResource("Animation_r7d8j"),
"Hold": SubResource("Animation_h0nmw"),
"Hold walking": SubResource("Animation_0u1qr"),
"Idle": SubResource("Animation_ks57g"),
"Jump": SubResource("Animation_lhm4k"),
"Lift": SubResource("Animation_b0sy6"),
"RESET": SubResource("Animation_06hx1"),
"Throw": SubResource("Animation_w2hb2"),
"Walk": SubResource("Animation_1cxbs"),
"ow": SubResource("Animation_pxl65")
}

[sub_resource type="AnimationRootNode" id="AnimationRootNode_7noor"]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_by05l")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.09, 0.09)
sprite_frames = SubResource("SpriteFrames_23qqo")
animation = &"Walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 2)
shape = SubResource("CapsuleShape2D_lv10b")

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, 19)
shape = SubResource("RectangleShape2D_osb4y")

[node name="AnimationPlayerKid" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5ilhx")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationRootNode_7noor")
anim_player = NodePath("../AnimationPlayerKid")
advance_expression_base_node = NodePath("../AnimationPlayerKid")

[node name="BallHere" type="Marker2D" parent="."]
position = Vector2(32, 0)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
limit_left = 0
limit_bottom = 690

[connection signal="animation_finished" from="AnimationPlayerKid" to="." method="_on_animation_player_kid_animation_finished"]
